Add movie class, and scaffold item, as well as DB

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MovieAppForGit1Context": "Server=(localdb)\\mssqllocaldb;Database=MovieAppForGit1Context-342a65ae-4990-4c42-95fc-bbc5ea256423;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
